tests/machine/x/go/right_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/right_join.go:14:18: undefined: CustomersItem
../../../tests/machine/x/go/right_join.go:15:3: undefined: CustomersItem
../../../tests/machine/x/go/right_join.go:19:3: undefined: CustomersItem
../../../tests/machine/x/go/right_join.go:23:3: undefined: CustomersItem
../../../tests/machine/x/go/right_join.go:27:3: undefined: CustomersItem
../../../tests/machine/x/go/right_join.go:32:15: undefined: OrdersItem
../../../tests/machine/x/go/right_join.go:36:5: undefined: OrdersItem
../../../tests/machine/x/go/right_join.go:40:5: undefined: OrdersItem
../../../tests/machine/x/go/right_join.go:46:15: undefined: Result
../../../tests/machine/x/go/right_join.go:51:11: undefined: CustomersItem
../../../tests/machine/x/go/right_join.go:51:11: too many errors

1: //go:build ignore
